(fix) font size on small size device

--- a/assets/main.css
+++ b/assets/main.css
@@ -52,6 +52,10 @@ body {
   height: 6em;
 }
 
+.break-small {
+  height: 3em;
+}
+
 /* nav */
 .nav a {
   color: #727272;
@@ -199,6 +203,10 @@ i:hover {
     display: inline-block;
     float: right;
     padding: 0.2em;
+  }
+
+  h4 {
+    font-size: 4em;
   }
 }
 
